test(anagram): simplify path resolver